gitops/infra/onprem/proxy/medfish/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
  namespace: onprem-proxy
  labels:
    app: transmission
spec:
 ports:
  - protocol: TCP
    name: http
    port: 9091
---
apiVersion: v1
kind: Endpoints
metadata:
  name: transmission
  namespace: onprem-proxy
subsets: 
- addresses:
  - ip: 10.0.1.1
  ports:
  - port: 9091
