gitops/infra/onprem/proxy/medfish/transmission/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: onprem-proxy
spec:
  ingressClassName: nginx-internal
  rules:
  - host: transmission.int.konst.fish
    http:
      paths:
      - backend:
          service:
            name: transmission
            port:
              name: http
        path: /
        pathType: ImplementationSpecific
